--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,21 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>net.sourceforge.jexcelapi</groupId>
+			<artifactId>jxl</artifactId>
+			<version>2.6.12</version>
+		</dependency>
+		<dependency>
+			<groupId>com.thoughtworks.xstream</groupId>
+			<artifactId>xstream</artifactId>
+			<version>1.4.3</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.barcode4j</groupId>
+			<artifactId>barcode4j</artifactId>
+			<version>2.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.deltaspike.core</groupId>
 			<artifactId>deltaspike-core-api</artifactId>
 			<version>${deltaspike.version}</version>
@@ -61,13 +76,8 @@
 			<artifactId>icefaces-ace</artifactId>
 			<version>${icefaces.version}</version>
 		</dependency>
-<!-- 		
-		<dependency>
-			<groupId>org.icepush</groupId>
-			<artifactId>icepush</artifactId>
-			<version>${icefaces.version}</version>
-		</dependency>
--->		
+		<!-- <dependency> <groupId>org.icepush</groupId> <artifactId>icepush</artifactId> 
+			<version>${icefaces.version}</version> </dependency> -->
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
