--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,12 @@
 		<wildfly.plugin.version>1.0.1.Final</wildfly.plugin.version>
 		<deltaspike.version>1.1.0</deltaspike.version>
 	</properties>
+	<repositories>
+		<repository>
+			<id>snapshots</id>
+			<url>http://anonsvn.icefaces.org/repo/maven2/releases/</url>
+		</repository>
+	</repositories>	
 	<dependencies>
 		<dependency>
 			<groupId>org.jboss.spec</groupId>
