--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,7 @@
 					<source>1.8</source>
 					<target>1.8</target>
 					<fork>true</fork>
+					<encoding>ISO-8859-1</encoding>
 					<executable>${env.JAVA_HOME}/bin/javac</executable>
 				</configuration>
 			</plugin>
