--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,27 @@
 		<javaee.version>3.0.2.Final</javaee.version>
 		<icefaces.version>4.0.0</icefaces.version>
 		<wildfly.version>8.1.0.Final</wildfly.version>
-		<wildfly.plugin.version>1.0.1.Final</wildfly.plugin.version>
+		<wildfly.plugin.version>1.0.2.Final</wildfly.plugin.version>
 		<deltaspike.version>1.1.0</deltaspike.version>
 	</properties>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.jboss.arquillian</groupId>
+				<artifactId>arquillian-bom</artifactId>
+				<version>1.1.7.Final</version>
+				<scope>import</scope>
+				<type>pom</type>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.shrinkwrap.resolver</groupId>
+				<artifactId>shrinkwrap-resolver-bom</artifactId>
+				<version>2.1.0</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	<dependencies>
 		<dependency>
 			<groupId>org.jboss.spec</groupId>
@@ -21,6 +39,51 @@
 			<type>pom</type>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.jboss.arquillian.junit</groupId>
+			<artifactId>arquillian-junit-container</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.wildfly</groupId>
+			<artifactId>wildfly-arquillian-container-remote</artifactId>
+			<version>8.2.0.Final</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.arquillian.extension</groupId>
+			<artifactId>arquillian-persistence-dbunit</artifactId>
+			<version>1.0.0.Alpha7</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.shrinkwrap.resolver</groupId>
+			<artifactId>shrinkwrap-resolver-depchain</artifactId>
+			<type>pom</type>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.arquillian.protocol</groupId>
+			<artifactId>arquillian-protocol-servlet</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- <dependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-jpamodelgen</artifactId> 
+			<version>4.3.8.Final</version> <scope>provided</scope> </dependency> <dependency> 
+			<groupId>org.jboss.arquillian.graphene</groupId> <artifactId>graphene-webdriver</artifactId> 
+			<version>2.1.0.Alpha2</version> <type>pom</type> <scope>test</scope> </dependency> 
+			<dependency> <groupId>org.jboss.arquillian.extension</groupId> <artifactId>arquillian-persistence-core</artifactId> 
+			<version>1.0.0.Alpha7</version> <scope>test</scope> </dependency> <dependency> 
+			<groupId>org.jboss.arquillian.extension</groupId> <artifactId>arquillian-persistence-dbunit</artifactId> 
+			<version>1.0.0.Alpha7</version> <scope>test</scope> </dependency> <dependency> 
+			<groupId>org.jboss.arquillian.extension</groupId> <artifactId>arquillian-persistence-impl</artifactId> 
+			<version>1.0.0.Alpha6</version> <scope>test</scope> </dependency> <dependency> 
+			<groupId>org.wildfly</groupId> <artifactId>wildfly-arquillian-container-remote</artifactId> 
+			<version>8.1.0.CR2</version> <scope>test</scope> </dependency> <dependency> 
+			<groupId>org.jboss.arquillian.protocol</groupId> <artifactId>arquillian-protocol-servlet</artifactId> 
+			<scope>test</scope> </dependency> <dependency> <groupId>org.jboss.shrinkwrap.resolver</groupId> 
+			<artifactId>shrinkwrap-resolver-impl-maven</artifactId> </dependency> -->
+
 		<dependency>
 			<groupId>com.lowagie</groupId>
 			<artifactId>itext</artifactId>
@@ -95,31 +158,31 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>4.3.5.Final</version>
+			<version>4.3.8.Final</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.logging</groupId>
 			<artifactId>jboss-logging</artifactId>
-			<version>3.1.4.GA</version>
+			<version>3.2.1.Final</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jaxrs</artifactId>
-			<version>3.0.8.Final</version>
+			<version>3.0.10.Final</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-multipart-provider</artifactId>
-			<version>3.0.8.Final</version>
+			<version>3.0.10.Final</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.8.1</version>
+			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -141,6 +204,10 @@
 				<groupId>org.wildfly.plugins</groupId>
 				<artifactId>wildfly-maven-plugin</artifactId>
 				<version>${wildfly.plugin.version}</version>
+			</plugin>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.18.1</version>
 			</plugin>
 		</plugins>
 	</build>
