--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,11 @@
 			<artifactId>shrinkwrap-resolver-impl-maven</artifactId> </dependency> -->
 
 		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.9.2</version>
+		</dependency>
+		<dependency>
 			<groupId>com.lowagie</groupId>
 			<artifactId>itext</artifactId>
 			<version>2.1.7</version>
